--- a/content/netsuite/shopify-discounts.mdx
+++ b/content/netsuite/shopify-discounts.mdx
@@ -1,6 +1,6 @@
 # Shopify Discounts
 
-Shopify discounts have traditionally been totaled in Celigo and added as a discount at the header level in NetSuite. This approach has created issues with refunds and tax calculations when orders are modified. We are transitioning to use Celigo's native integration that creates discount line items for line items with discounts in Shopify, while retaining a header-level discount for order-level discounts. This change will allow for proper tax and refund calculations.
+Shopify discounts originally were totaled in Celigo and added as a fixed amount discount at the header level in NetSuite. This approach has created issues with refunds and tax calculations when orders are modified. We have transitioned to use Celigo's native integration that creates discount line items for line items with discounts in Shopify, while retaining a header-level discount for order-level discounts. This configuration allows for proper tax and refund calculations.
 
 ## Order Level Discounts
 
