--- a/content/shopify/shopify.mdx
+++ b/content/shopify/shopify.mdx
@@ -2,6 +2,20 @@
 
 This is a running list of changes made to the [Shopify Theme](https://github.com/deckedusa/decked-shopify). This code base powers most of the decked.com funtionality.
 
+## v1.3.27 - 5 in 5 Launch
+**User Experience Improvements**
+- Added better responsive configurations for promotional blocks on collection pages to support 5-in-5 campaign
+- Fixed product customization layouts for mounting location options
+- Added new white badge style for product listings and detail pages
+- Fixed Technical Notes section display when there are no notes
+
+**Campaign & Navigation Updates**
+- Added styles for 5-in-5 navigation banner
+- Added links to multi-column section on Vehicle Solutions page 
+
+**Analytics Enhancement**
+- Added Make/Model/Year tracking to purchase events for customer insights
+
 ## v1.3.26 - Important Notes Update
 **Enhanced Order Tracking**
 - Added fallback tracking for all Shopify orders where carrier APIs were unavailable using the new Rocket TMS API
